--- a/Makefile.common
+++ b/Makefile.common
@@ -286,12 +286,15 @@ $(PROMU):
 proto:
 	@echo ">> generating code from proto files"
 	@./scripts/genproto.sh
+
 ifdef GOLANGCI_LINT
 $(GOLANGCI_LINT):
 	mkdir -p $(FIRST_GOPATH)/bin
 	curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/$(GOLANGCI_LINT_VERSION)/install.sh \
 		| sed -e '/install -d/d' \
 		| sh -s -- -b $(FIRST_GOPATH)/bin $(GOLANGCI_LINT_VERSION)
+	apt-get update
+	apt-get install -y git
 endif
 
 ifdef GOVENDOR
