--- a/Makefile.common
+++ b/Makefile.common
@@ -227,11 +227,11 @@ ifdef GO111MODULE
 	@echo ">> running check for unused/missing packages in go.mod"
 	GO111MODULE=$(GO111MODULE) $(GO) mod tidy
 ifeq (,$(wildcard vendor))
-	#@git diff --exit-code -- go.sum go.mod
+	@git diff --exit-code -- go.sum go.mod
 else
 	@echo ">> running check for unused packages in vendor/"
 	GO111MODULE=$(GO111MODULE) $(GO) mod vendor
-	#@git diff --exit-code -- go.sum go.mod vendor/
+	@git diff --exit-code -- go.sum go.mod vendor/
 endif
 endif
 endif
@@ -293,8 +293,6 @@ $(GOLANGCI_LINT):
 	curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/$(GOLANGCI_LINT_VERSION)/install.sh \
 		| sed -e '/install -d/d' \
 		| sh -s -- -b $(FIRST_GOPATH)/bin $(GOLANGCI_LINT_VERSION)
-	apt-get update
-	apt-get install -y git
 endif
 
 ifdef GOVENDOR
